force-app/main/default/objects/Activity/fields/Activity_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Activity_Created_Date_Time__c</fullName>
    <formula>DATETIMEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Created Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>