force-app/main/default/objects/Activity/fields/Call_Origin__c.field-meta.xml
<CustomField>
    <fullName>Call_Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call out</fullName>
            </value>
            <value>
                <fullName>Call in</fullName>
            </value>
            <value>
                <fullName>Call Attempt</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>