force-app/main/default/objects/Activity/fields/Call_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Call_Purpose__c</fullName>
    <label>Call Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SALES OTHER</fullName>
            </value>
            <value>
                <fullName>Make First Contact</fullName>
            </value>
            <value>
                <fullName>Provide_Loan_Quote</fullName>
                <label>Quote</label>
            </value>
            <value>
                <fullName>Answer Questions</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>CREDIT OTHER</fullName>
            </value>
            <value>
                <fullName>Complete application</fullName>
            </value>
            <value>
                <fullName>Request Docs</fullName>
            </value>
            <value>
                <fullName>Request CQP</fullName>
            </value>
            <value>
                <fullName>Request Information</fullName>
            </value>
            <value>
                <fullName>SERVICE OTHER</fullName>
            </value>
            <value>
                <fullName>Provide Update</fullName>
            </value>
            <value>
                <fullName>WALLET SHARE OTHER</fullName>
            </value>
            <value>
                <fullName>Offer HLHC</fullName>
            </value>
            <value>
                <fullName>General Wallet Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>