force-app/main/default/objects/Activity/fields/Customer_Res__c.field-meta.xml
<CustomField>
    <fullName>Customer_Res__c</fullName>
    <label>Customer Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commenced application</fullName>
            </value>
            <value>
                <fullName>Completed application</fullName>
            </value>
            <value>
                <fullName>Documents Provided (docs remain outstanding)</fullName>
            </value>
            <value>
                <fullName>Documents Provided (all received)</fullName>
            </value>
            <value>
                <fullName>Signed CQP</fullName>
            </value>
            <value>
                <fullName>Signed credit contract</fullName>
            </value>
            <value>
                <fullName>ID Verification</fullName>
            </value>
            <value>
                <fullName>Loan Drawn Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>