force-app/main/default/objects/Activity/fields/Event_Result__c.field-meta.xml
<CustomField>
    <fullName>Event_Result__c</fullName>
    <label>Event Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed Successful</fullName>
            </value>
            <value>
                <fullName>Completed Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Cancelled Rescheduled</fullName>
            </value>
            <value>
                <fullName>Cancelled Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>