force-app/main/default/objects/Activity/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <formula>IF(ActivityDate &gt; TODAY(), &quot;Scheduled&quot;, IF(ISPICKVAL( Event_Result__c,&quot;&quot;),&quot;Overdue&quot;,TEXT( Event_Result__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Status</label>
    <type>Text</type>
</CustomField>