force-app/main/default/objects/Activity/fields/Event_type__c.field-meta.xml
<CustomField>
    <fullName>Event_type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HLHC</fullName>
            </value>
            <value>
                <fullName>Loan Proposal Presentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>