force-app/main/default/objects/Activity/fields/Hour_of_Day_24hr__c.field-meta.xml
<CustomField>
    <fullName>Hour_of_Day_24hr__c</fullName>
    <formula>HOUR( TIMEVALUE(   ActivityDateTime   + (11 / 24 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour of Day (24hr)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>