force-app/main/default/objects/Activity/fields/Is_AssignTo__c.field-meta.xml
<CustomField>
    <fullName>Is_AssignTo__c</fullName>
    <formula>NOT(OR(ISBLANK(Owner:User.Id),  ISBLANK(Owner:Queue.QueueName)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is AssignTo</label>
    <type>Checkbox</type>
</CustomField>