force-app/main/default/objects/Activity/fields/Is_Stage_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Stage_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stage Changed</label>
    <type>Checkbox</type>
</CustomField>