force-app/main/default/objects/Activity/fields/Lender_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Lender_Conditions__c</fullName>
    <inlineHelpText>Multi-select picklist allows multiple selections by pressing SHIFT</inlineHelpText>
    <label>Lender Response</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More documents</fullName>
            </value>
            <value>
                <fullName>More information</fullName>
            </value>
            <value>
                <fullName>Documents incorrect</fullName>
            </value>
            <value>
                <fullName>Documents contain TFNs</fullName>
            </value>
            <value>
                <fullName>Documents Illegible</fullName>
            </value>
            <value>
                <fullName>Incorrect information</fullName>
            </value>
            <value>
                <fullName>Clarify income</fullName>
            </value>
            <value>
                <fullName>Clarify living expenses</fullName>
            </value>
            <value>
                <fullName>Clarify liabilities</fullName>
            </value>
            <value>
                <fullName>Clarify credit inquiries</fullName>
            </value>
            <value>
                <fullName>Clarify directorships</fullName>
            </value>
            <value>
                <fullName>Missing liabilities</fullName>
            </value>
            <value>
                <fullName>Servicing not evident</fullName>
            </value>
            <value>
                <fullName>Valuation short</fullName>
            </value>
            <value>
                <fullName>Does not fit policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>