force-app/main/default/objects/Activity/fields/Make_Activity_Private__c.field-meta.xml
<CustomField>
    <fullName>Make_Activity_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to hide this activity from external reporting.</inlineHelpText>
    <label>Make Activity Private</label>
    <type>Checkbox</type>
</CustomField>