force-app/main/default/objects/Activity/fields/Make_Comments_Public__c.field-meta.xml
<CustomField>
    <fullName>Make_Comments_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to make comments public to external stakeholders.</inlineHelpText>
    <label>Make Comments Public</label>
    <type>Checkbox</type>
</CustomField>