force-app/main/default/objects/Activity/fields/mercury__Media__c.field-meta.xml
<CustomField>
    <fullName>mercury__Media__c</fullName>
    <label>Media</label>
    <type>Url</type>
</CustomField>