force-app/main/default/objects/Activity/fields/mercury__Number_of_Responses__c.field-meta.xml
<CustomField>
    <fullName>mercury__Number_of_Responses__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of responses received for this SMS</inlineHelpText>
    <label>Number of Responses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>