force-app/main/default/objects/Activity/fields/mercury__Sent_To__c.field-meta.xml
<CustomField>
    <fullName>mercury__Sent_To__c</fullName>
    <inlineHelpText>The actual number the SMS was sent to</inlineHelpText>
    <label>SMS Sent To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>