force-app/main/default/objects/Activity/fields/mercury__SMS__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the Task was generated via the SMS app</inlineHelpText>
    <label>SMS</label>
    <type>Checkbox</type>
</CustomField>