force-app/main/default/objects/Activity/fields/mercury__SMS_Account__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Account__c</fullName>
    <description>What account was the message sent/received to.</description>
    <inlineHelpText>What account was the message sent/received to.</inlineHelpText>
    <label>SMS Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>