force-app/main/default/objects/Activity/fields/mercury__SMS_Campaign__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populated for Campaign Sends where the Recipient is a Lead</inlineHelpText>
    <label>SMS Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>