force-app/main/default/objects/Activity/fields/mercury__SMS_Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Delivery_Time__c</fullName>
    <description>Time the Message was Received by the Handset, if available.</description>
    <inlineHelpText>Time the Message was Received by the Handset, if available.</inlineHelpText>
    <label>SMS Delivery Time</label>
    <type>DateTime</type>
</CustomField>