force-app/main/default/objects/Activity/fields/mercury__SMS_Direction__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Direction__c</fullName>
    <inlineHelpText>Indicates the direction of the SMS message</inlineHelpText>
    <label>SMS Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>