force-app/main/default/objects/Activity/fields/mercury__SMS_Message__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ties the API Data stored in the SMS Message back to the Task record.</description>
    <label>SMS Message</label>
    <referenceTo>mercury__SMS_Message__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>