force-app/main/default/objects/Activity/fields/mercury__SMS_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Message_Id__c</fullName>
    <description>Id for this Message</description>
    <externalId>true</externalId>
    <inlineHelpText>Id for this Message</inlineHelpText>
    <label>SMS Message Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>