force-app/main/default/objects/Activity/fields/mercury__SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to signify that the related contact/lead is opting out of sms</description>
    <label>SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>