force-app/main/default/objects/Activity/fields/mercury__SMS_Receive_Email__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Receive_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, indicated the Owner will receive an email alert for this SMS</description>
    <label>SMS Receive Email</label>
    <type>Checkbox</type>
</CustomField>