force-app/main/default/objects/Activity/fields/mercury__SMS_Reference__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Reference__c</fullName>
    <description>Displayed Name information of the primary record related to the Task.  Used in email template</description>
    <formula>mercury__SMS_Message__r.mercury__Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS Reference</label>
    <type>Text</type>
</CustomField>