force-app/main/default/objects/Activity/fields/mercury__SMS_Related_Id__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Related_Id__c</fullName>
    <description>If the message is a inbound reply, this will be the original outbound message id</description>
    <inlineHelpText>If the message is a inbound reply, this will be the original outbound message id</inlineHelpText>
    <label>SMS Related Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>