force-app/main/default/objects/Activity/fields/mercury__SMS_Sent_From__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Sent_From__c</fullName>
    <inlineHelpText>The number this inbound message was sent from.</inlineHelpText>
    <label>SMS Sent From</label>
    <type>Phone</type>
</CustomField>