force-app/main/default/objects/Activity/fields/mercury__SMS_Status__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Status__c</fullName>
    <description>Current status of message</description>
    <label>SMS Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>