force-app/main/default/objects/Activity/fields/mercury__SMS_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Status_Code__c</fullName>
    <description>Status code for message</description>
    <inlineHelpText>Status code for message</inlineHelpText>
    <label>SMS Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>