force-app/main/default/objects/Activity/fields/mercury__SMS_Tag__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Tag__c</fullName>
    <description>Applied to Bulk SMS messages for easy Segmentation</description>
    <label>SMS Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>