force-app/main/default/objects/Activity/fields/mercury__Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>mercury__Thread_Id__c</fullName>
    <description>Used to determine if messages are related.  A thread can be defined as messages that share the same combination of who &amp; what Ids.</description>
    <label>Thread Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>