force-app/main/default/objects/Activity/fields/Task_Due_Status__c.field-meta.xml
<CustomField>
    <fullName>Task_Due_Status__c</fullName>
    <formula>IF( ISPICKVAL(Status , &quot;Completed&quot;) , &quot;&quot; , IF( ActivityDate &gt; TODAY() , &quot;Due Later&quot; , IF( ActivityDate = TODAY() , &quot;Due Today&quot; , &quot;Overdue&quot; ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Due Status</label>
    <type>Text</type>
</CustomField>