force-app/main/default/objects/Activity/fields/User_Activity__c.field-meta.xml
<CustomField>
    <fullName>User_Activity__c</fullName>
    <label>User Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SALES</fullName>
            </value>
            <value>
                <fullName>Prepare Proposal</fullName>
            </value>
            <value>
                <fullName>Credit Research</fullName>
            </value>
            <value>
                <fullName>CREDIT</fullName>
            </value>
            <value>
                <fullName>Valuation Request</fullName>
            </value>
            <value>
                <fullName>Preliminary Assessment (incomplete)</fullName>
            </value>
            <value>
                <fullName>Preliminary Assessment (complete)</fullName>
            </value>
            <value>
                <fullName>Submit application</fullName>
            </value>
            <value>
                <fullName>Respond to Conditions</fullName>
            </value>
            <value>
                <fullName>SERVICE</fullName>
            </value>
            <value>
                <fullName>WALLET SHARE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>